# ghostly_game

./: .gitignore  cargo.toml  ghostly_sublime.sublime-workspace  readme.md
gengar_engine/: Cargo.toml  readme.md
gengar_engine/engine_resources/shaders/: basic.fs  basic.vs  color.fs  color.vs
gengar_engine/src/: ascii.rs  color.rs  debug.rs  engine.rs  error.rs  lib.rs  matricies.rs  model.rs  obj.rs  render.rs  resources.rs  state.rs  transform.rs  vectors.rs
gengar_engine/src/engine/: color.rs  error.rs  model.rs  obj.rs  render.rs  state.rs  transform.rs  vectors.rs
gengar_engine/src/engine/matricies/: matrix_four_four.rs
gengar_engine/src/engine/render/: camera.rs  image.rs  render_command.rs  shader.rs  vao.rs
gengar_engine/src/matricies/: matrix_four_four.rs
gengar_engine/src/render/: camera.rs  image.rs  material.rs  render_command.rs  shader.rs  vao.rs
gengar_engine/testing_resources/: obj_test.txt
gengar_render_opengl/: Cargo.toml  generated_gl_functions_and_types.rs  readme.md
gengar_render_opengl/src/: gengar_render_opengl.rs  lib.rs  ogl_render.rs  render.rs
gengar_render_webgl/: Cargo.toml
gengar_render_webgl/src/: lib.rs  render.rs
gengar_renderapi_opengl_windows/: Cargo.toml  readme.md
gengar_renderapi_opengl_windows/src/: lib.rs  wgl_api.rs
ghostly_game/: Cargo.toml  readme.md
ghostly_game/resources/ship/: ship_zero.blend  ship_zero.mtl
ghostly_game/src/: game.rs  main.rs  state.rs
ghostly_game/src/game/: state.rs
ghostly_game_web/: Cargo.toml  index.html  npm_start_server.bat  readme.md
ghostly_game_web/development_resources/: chrome_debug_launch.bat  npm_start_server.bat
ghostly_game_web/firebase_hosting/: .firebaserc
ghostly_game_web/src/: lib.rs  render_api.rs  webgl.rs
ghostly_game_web/src/webgl/: webgl_render.rs  webgl_render_api.rs
ghostly_game_web/www/: index.html  index.js  package-lock.json  package.json
ghostly_game_web/www_2/: index.html
ghostly_game_windows/: Cargo.toml  readme.md
ghostly_game_windows/src/: gl.rs  main.rs
