[package]
name = "gengar_renderapi_opengl_windows"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/wgl_api.rs"

[dependencies]
gengar_engine = { path = "../gengar_engine" }
gengar_render_opengl = { path = "../gengar_render_opengl" }
libc = "0.2"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
	"Win32_Graphics_OpenGL",
]   