[package]
name = "ghostly_game_windows"
version = "0.1.0"
edition = "2021"

[dependencies]
gengar_engine = { path = "../gengar_engine" }
gengar_render_opengl = { path = "../gengar_render_opengl" }
ghostly_game = { path = "../ghostly_game" }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]
