[package]
name = "ghostly_game_windows"
version = "0.1.0"
edition = "2021"

[dependencies]
gengar_engine = { path = "../gengar_engine" }
gengar_renderapi_opengl_windows = { path = "../gengar_renderapi_opengl_windows" }
gengar_render_opengl = { path = "../gengar_render_opengl" }
ghostly_game = { path = "../ghostly_game" }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell"
]